[metadata]
name = brokance
version = 0.1.0
author = Daniele Affinita
author_email = danieleaffinita2000@gmail.com
description = Retail investment framework 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DaniAffCH/Brokance
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    yfinance
    ccxt
    joblib
    openpyxl

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
